--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p><a href="https://claudiaampler.github.io/langswitcher.html">Langswitcher</a></p>
+<p><a href="https://claudiaampler.github.io/langswitcher_test.html">Langswitcher test</a></p>
 </body>
 </html>
