--- a/langswitcher_test.html
+++ b/langswitcher_test.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Language Switcher</title>
+  <title>Language Switcher Test</title>
       <style type="text/css">
       #outlook a {
         padding: 0;
@@ -70,7 +70,7 @@
                                 <td align="left" style="font-size:0px; padding-bottom: 0px; padding-right: 10px; padding-left: 10px; padding-top:10px; word-break: break-word;">
                                   <form style="font-family:'Helvetica', 'Arial', sans-serif;font-size:16px;line-height:1.4;text-align:left;color:#212121;">
                                   </form>
-                                  <form action="https://app.getvero.com/forms/e86b0865db89c1789423c8de42d44185" method="post">
+                                  <form action="https://app.getvero.com/forms/e86b0865db89c1789423c8de42d44185" method="post" target="_blank">
                                     <label style="border: #00825B">
                                       <div style="font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;line-height:1.8;text-align:left;color:#212121;">Email<br></div>
                                       <label for="email">Email</label> <input name="email" type="email" value="" style="width: 250px; font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;line-height:1.8;text-align:left;color:#757575;" required="required">
@@ -86,7 +86,7 @@
                                       <option value="no" style="width: 260px; height: 30px;">Norwegian</option>
                                     </select>
                                     <br>
-                                    <input name="redirect_on_success" type="hidden" value="https://amplerbikes.com/en/newsletter-language" target="_blank"> 
+                                    <input name="redirect_on_success" type="hidden" value="https://amplerbikes.com/en/newsletter-language"> 
                                       <input type="submit" value="Confirm" color="#ffffff" style="width: 150px; margin-top:20px; border:1px solid #00825b;border-radius:30px;cursor:auto;mso-padding-alt:0px 25px; background:#00825B; color:#ffffff;font-family:'Helvetica', 'Arial', sans-serif;font-size:16px;font-weight:normal;line-height: 140%; letter-spacing: 0.1; padding-left: 40px; padding-right: 40px; padding-top: 7px;padding-bottom: 7px;" valign="center">
                                   </form>
                                 </td>
