--- a/langswitcher.html
+++ b/langswitcher.html
@@ -13,12 +13,13 @@
 				<td align="left" style="font-size:0px; padding-bottom: 0px; padding-right: 10px; padding-left: 10px; padding-top:10px; word-break: break-word;>
 				  <form style="font-family:'Helvetica', 'Arial', sans-serif;font-size:16px;line-height:1.4;text-align:left;color:#212121;">
 				  </form>
-				  <form action="https://app.getvero.com/forms/831d7766cf30b4ee5dd82dc524e43913" method="post" target="_blank">
+				  <form action="https://app.getvero.com/forms/831d7766cf30b4ee5dd82dc524e43913" name="langswitch" method="post" target="_blank">
+				  <form action="https://app.getvero.com/forms/ece84622b31b08fd6f6f809f17d43913" name="unsubscribe" method="post" target="_blank">
 					<label style="border: #00825B">
 					  <div style="font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;line-height:1.8;text-align:left;color:#212121;">Email<br></div>
-					  <label for="email">Email</label> <input name="email" type="email" value="" style="width: 250px; font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;line-height:1.8;text-align:left;color:#757575;border-color: #D7D7D7;" required="required">
+					  <label for="email" required="required">Email</label> <input name="email" type="email" value="" style="width: 250px; font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;line-height:1.8;text-align:left;color:#757575;border-color: #D7D7D7;" required="required">
 					  <div style="font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;line-height:1.8;text-align:left;color:#212121;margin-top:10px;border-color: #D7D7D7;">Preferred language<br></div>
-					  <label for="user_locale" required="required">Preferred language</label>
+					  <label for="user_locale">Preferred language</label>
 					</label>
 					<select name="user[locale]" style="width: 260px; height: 30px; line-height: 140%; font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;text-align:left;color:#757575;">
 					  <option value="en" style="width: 260px; height: 30px;">English</option>
@@ -30,7 +31,10 @@
 					</select>
 					<br>
 					<input name="redirect_on_success" type="hidden" value="https://amplerbikes.com/en/newsletter-language"> 
-					  <input type="submit" value="Confirm" color="#ffffff" style="width: 150px; margin-top:20px; border:1px solid #00825b;border-radius:30px;cursor:auto;mso-padding-alt:0px 25px; background:#00825B; color:#ffffff;font-family:'Helvetica', 'Arial', sans-serif;font-size:16px;font-weight:normal;line-height: 140%; letter-spacing: 0.1; padding-left: 40px; padding-right: 40px; padding-top: 7px;padding-bottom: 7px;" valign="center">
+					  <input type="submit" value="Update" color="#ffffff" style="width: 100px; margin-top:20px; border:1px solid #00825b;border-radius:30px;cursor:auto;mso-padding-alt:0px 25px; background:#00825B; color:#ffffff;font-family:'Helvetica', 'Arial', sans-serif;font-size:16px;font-weight:normal;line-height: 140%; letter-spacing: 0.1; padding-left: 40px; padding-right: 40px; padding-top: 7px;padding-bottom: 7px;" valign="center">
+					  
+					  <input name="redirect_on_success" type="hidden" value="{{url.unsubscribe}}"> 
+					  <input type="submit" value="Unsubscribe" color="#ffffff" style="width: 100px; margin-top:20px; border:1px solid #00825b;border-radius:30px;cursor:auto;mso-padding-alt:0px 25px; background:#00825B; color:#ffffff;font-family:'Helvetica', 'Arial', sans-serif;font-size:16px;font-weight:normal;line-height: 140%; letter-spacing: 0.1; padding-left: 40px; padding-right: 40px; padding-top: 7px;padding-bottom: 7px;" valign="center">
 				  </form>
 				</td>
 			  </tr>
