--- a/langswitcher.html
+++ b/langswitcher.html
@@ -17,9 +17,9 @@
 					<label style="border: #00825B">
 					  <div style="font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;line-height:1.8;text-align:left;color:#212121;">Email<br></div>
 					  <label for="email" required="required">Email</label> <input name="email" type="email" value="" style="width: 250px; font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;line-height:1.8;text-align:left;color:#757575;border-color: #D7D7D7; border-width: 1px;
-    border-radius: 0;" required="required">
+    border-radius: 0; border-style: solid;">
 					  <div style="font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;line-height:1.8;text-align:left;color:#212121;margin-top:10px;border-color: #D7D7D7; border-width: 1px;
-    border-radius: 0;">Preferred language<br></div>
+    border-radius: 0;border-style: solid;">Preferred language<br></div>
 					  <label for="user_locale">Preferred language</label>
 					</label>
 					<select name="user[locale]" style="width: 260px; height: 30px; line-height: 140%; font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;text-align:left;color:#757575;">
@@ -34,8 +34,8 @@
 					<input name="redirect_on_success" type="hidden" value="https://amplerbikes.com/en/newsletter-language"> 
 					  <input type="submit" value="Update" color="#ffffff" style="width: 130px; margin-top:20px; border:1px solid #00825b;border-radius:30px;cursor:auto;mso-padding-alt:0px 25px; background:#00825B; color:#ffffff;font-family:'Helvetica', 'Arial', sans-serif;font-size:16px;font-weight:normal;line-height: 140%; letter-spacing: 0.1; padding-left: 30px; padding-right: 30px; padding-top: 7px;padding-bottom: 7px;" valign="center">
 					  
-					  <input name="redirect_on_success" type="hidden" formaction="{{url.unsubscribe}}"> 
-					  <input type="submit" value="Unsubscribe" color="#ffffff" style="width: 130px; margin-top:20px; border:1px solid #00825b;border-radius:30px;cursor:auto;mso-padding-alt:0px 25px; background:#00825B; color:#ffffff;font-family:'Helvetica', 'Arial', sans-serif;font-size:16px;font-weight:normal;line-height: 140%; letter-spacing: 0.1; padding-left: 30px; padding-right: 30px; padding-top: 7px;padding-bottom: 7px;" valign="center">
+					  <input name="redirect_on_success" type="hidden" formaction="{{url.unsubscribe_link}}"> 
+					  <input type="submit" value="Unsubscribe" color="#ffffff" style="width: 130px; margin-top:20px; border:1px solid #00825b;border-radius:30px;cursor:auto;mso-padding-alt:0px 25px; background:#00825B; color:#ffffff;font-family:'Helvetica', 'Arial', sans-serif;font-size:16px;font-weight:normal;line-height: 140%; letter-spacing: 0.1; padding-left: 20px; padding-right: 20px; padding-top: 7px;padding-bottom: 7px;" valign="center">
 				  </form>
 				  </form>
 				</td>
