--- a/langswitcher.html
+++ b/langswitcher.html
@@ -32,9 +32,9 @@
 					</select>
 					<br>
 					<input name="redirect_on_success" type="hidden" value="https://amplerbikes.com/en/newsletter-language"> 
-					  <input type="submit" value="Update" color="#ffffff" style="width: 130px; margin-top:20px; margin-right:10px; border:1px solid #00825b;border-radius:30px;cursor:auto;mso-padding-alt:0px 25px; background:#00825B; color:#ffffff;font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;font-weight:normal;line-height: 140%; letter-spacing: 0.1; padding-left: 30px; padding-right: 30px; padding-top: 7px;padding-bottom: 7px;" valign="center">
+					  <input type="submit" value="Update" color="#ffffff" style="width: 120px; margin-top:20px; margin-right:5px; border:1px solid #00825b;border-radius:30px;cursor:auto;mso-padding-alt:0px 25px; background:#00825B; color:#ffffff;font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;font-weight:normal;line-height: 140%; letter-spacing: 0.1; padding-left: 30px; padding-right: 30px; padding-top: 7px;padding-bottom: 7px;" valign="center">
 					  
-					  <input type="submit" value="Unsubscribe" formaction="{{url.unsubscribe}}" color="#ffffff" style="width: 130px; margin-top:20px; margin-left:10px; border:1px solid #00825b;border-radius:30px;cursor:auto;mso-padding-alt:0px 25px; background:#00825B; color:#ffffff;font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;font-weight:normal;line-height: 140%; letter-spacing: 0.1; padding-left: 20px; padding-right: 20px; padding-top: 7px;padding-bottom: 7px;" valign="center">
+					  <input type="submit" value="Unsubscribe" formaction="{{url.unsubscribe_link}}" color="#ffffff" style="width: 130px; margin-top:20px; margin-left:5px; border:1px solid #00825b;border-radius:30px;cursor:auto;mso-padding-alt:0px 25px; background:#00825B; color:#ffffff;font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;font-weight:normal;line-height: 140%; letter-spacing: 0.1; padding-left: 20px; padding-right: 20px; padding-top: 7px;padding-bottom: 7px;" valign="center">
 				  </form>
 				  </form>
 				</td>
