--- a/langswitcher.html
+++ b/langswitcher.html
@@ -11,15 +11,15 @@
 		  <tbody>
 			  <tr>
 				<td align="left" style="font-size:0px; word-break: break-word;>
-				  <form style="font-family:'Helvetica', 'Arial', sans-serif;font-size:16px;line-height:1.4;text-align:left;color:#212121;">
+				  <form style="font-family:'aktiv grotesk', sans-serif;font-size:16px;line-height:1.4;text-align:left;color:#212121;">
 				  </form>
 				  <form action="https://app.getvero.com/forms/831d7766cf30b4ee5dd82dc524e43913" method="post" target="_blank">
-					  <div style="font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;line-height:1.8;text-align:left;color:#212121;">Email<br></div>
+					  <div style="font-family:'aktiv grotesk', sans-serif;font-size:14px;line-height:1.8;text-align:left;color:#212121;">Email<br></div>
 					  <label for="email" required="required">Email</label> <input name="email" type="email" value="" style="width: 250px; font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;line-height:1.8;text-align:left;color:#757575;border-color: #D7D7D7; border-width: 1px;
 						border-radius: 0; border-style: solid;">
-					  <div style="font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;line-height:1.8;text-align:left;color:#212121;margin-top:10px;">Preferred language<br></div>
+					  <div style="font-family:'aktiv grotesk', sans-serif;font-size:14px;line-height:1.8;text-align:left;color:#212121;margin-top:10px;">Preferred language<br></div>
 					  <label for="user_locale">Preferred language</label>
-						<select name="user[locale]" style="width: 260px; height: 30px; line-height: 140%; font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;text-align:left;color:#757575;border-color: #D7D7D7; border-width: 1px;
+						<select name="user[locale]" style="width: 260px; height: 30px; line-height: 140%; font-family:'aktiv grotesk', sans-serif;font-size:14px;text-align:left;color:#757575;border-color: #D7D7D7; border-width: 1px;
 						border-radius: 0;border-style: solid;">
 						  <option value="en" style="width: 260px; height: 30px;">English</option>
 						  <option value="de" style="width: 260px; height: 30px;">German</option>
@@ -29,8 +29,8 @@
 						  <option value="no" style="width: 260px; height: 30px;">Norwegian</option>
 						</select>
 						<br>
-						<input name="redirect_on_success" type="hidden" value="https://amplerbikes.com/en/newsletter-language"> 
-						  <input type="submit" value="Update" color="#ffffff" style="width: 140px; margin-top:20px; border:1px solid #00825b;border-radius:30px;cursor:auto;mso-padding-alt:0px 25px; background:#00825B; color:#ffffff;font-family:'Helvetica', 'Arial', sans-serif;font-size:14px;font-weight:normal;line-height: 140%; letter-spacing: 0.1; padding-left: 40px; padding-right: 40px; padding-top: 7px;padding-bottom: 7px;" valign="center">
+						<input name="redirect_on_success" type="hidden" value="https://amplerbikes.com/en/newsletter-language" target="_blank"> 
+						<input type="submit" value="Confirm" color="#ffffff" style="width: 150px; margin-top:20px; border:1px solid #00825b;border-radius:30px;cursor:auto;mso-padding-alt:0px 25px; background:#00825B; color:#ffffff;font-family:'aktiv grotesk', sans-serif;font-size:16px;font-weight:normal;line-height: 140%; letter-spacing: 0.1; padding-left: 40px; padding-right: 40px; padding-top: 7px;padding-bottom: 7px;" valign="center">
 				  </form>
 				 </td>
 			  </tr>
